一部分面试题目即概念笔记

--- a/docs/resources/interview/2.基本能力考察/1.页面布局.md
+++ b/docs/resources/interview/2.基本能力考察/1.页面布局.md
@@ -1,4 +1,6 @@
-### 布局方案
+### 1.页面布局
+
+#### 题目：假设高度已知，请写出三栏布局，其中左栏、右栏宽度各为300px，中间自适应。
 
 #### 尽可能多的方案
 
@@ -10,6 +12,186 @@
 
 #### 答案应该怎么写，技巧在哪
 
+1. 浮动
+
+```html
+<section class="layout">
+    <style>
+        *{
+            padding:0;
+            margin:0;
+        }
+        .layout div{
+            height:300px;
+        }
+        .layout .left{
+            float:left;
+            width:20px;
+            background-color:red;
+        }
+        .layout .right{
+            float:right;
+            width:20px;
+            background-color:red;
+        }
+        .layout .center{
+            background-color:blue;
+        }
+    </style>
+    <article>
+        <div class="left"></div>
+        <div class="right"></div>
+        <div class="center">浮动</div>
+    </article >
+</section>
+```
+
+2. 绝对定位
+
+```html
+<section class="layout">
+    <style>
+        *{
+            padding:0;
+            margin:0;
+        }
+        .layout{
+            position:relative;
+        }
+        .layout div{
+            height:300px;
+            position:absolute;
+        }
+        .layout .left{
+            left:0;
+            width:20px;
+            background-color:red;
+        }
+        .layout .right{
+            right:0;
+            width:20px;
+            background-color:red;
+        }
+        .layout .center{
+            left:20px;
+            right:20px;
+            background-color:blue;
+        }
+    </style>
+    <article>
+        <div class="left"></div>
+        <div class="center">绝对定位</div>
+        <div class="right"></div>
+    </article >
+</section>
+```
+
+3. display:flex
+
+```html
+<section class="layout">
+    <style>
+        *{
+            padding:0;
+            margin:0;
+        }
+        .layout .left-center-right{
+            display:flex;
+        }
+        .layout div{
+            height:300px;
+        }
+        .layout .left{
+            width:20px;
+            background-color:red;
+        }
+        .layout .right{
+            width:20px;
+            background-color:red;
+        }
+        .layout .center{
+            flex:1;
+            background-color:blue;
+        }
+    </style>
+    <article class="left-center-right">
+        <div class="left"></div>
+        <div class="center">display:flex</div>
+        <div class="right"></div>
+    </article >
+</section>
+```
+
+4. display:table
+
+```html
+<section class="layout">
+    <style>
+        *{
+            padding:0;
+            margin:0;
+        }
+        .layout .left-center-right{
+            display:table;
+            width:100%;
+            height:300px;
+        }
+        .layout div{
+            display:table-cell;
+        }
+        .layout .left{
+            width:20px;
+            background-color:red;
+        }
+        .layout .right{
+            width:20px;
+            background-color:red;
+        }
+        .layout .center{
+            background-color:blue;
+        }
+    </style>
+    <article class="left-center-right">
+        <div class="left"></div>
+        <div class="center">display:table</div>
+        <div class="right"></div>
+    </article >
+</section>
+```
+
+5. display:grid
+
+```html
+<section class="layout">
+    <style>
+        *{
+            padding:0;
+            margin:0;
+        }
+        .layout .left-center-right{
+            display:grid;
+            width:100%;
+            grid-template-rows:300px;
+            grid-template-columns: 20px auto 20px;
+        }
+        .layout .left{
+            background-color:red;
+        }
+        .layout .right{
+            background-color:red;
+        }
+        .layout .center{
+            background-color:blue;
+        }
+    </style>
+    <article class="left-center-right">
+        <div class="left"></div>
+        <div class="center">display:grid</div>
+        <div class="right"></div>
+    </article >
+</section>
+```
+
 #### 如何表现能力（延申）
 
 - 各自的优缺点；
@@ -18,15 +200,60 @@
     - flex：比较完美的，为解决上面两个的缺点而诞生的；
     - table：优点：很容易实现需求，兼容性好；缺点-每列的高度都始终一致；
     - grid：为实现以前模拟的栅格布局，可以做很多技术；缺点-因是新技术，兼容性不好
+
 - 高度需要自适应的情况；
 
-    flex和table支持高度自适应；
+    对于固定高度后，内容超出的情况，flex和table可自适应新高度；
+    
+    - 研究其原因：
+        - float：中间的高度超出后，超出内容会在下方占据整行（即左右两个div均有中间的背景色）；因为中间超出两边后，左右没有挡住它的地方了，它可以自适应宽度。
 
-    研究其原因。
+    对于未给定高度的情况，flex、table和grid支持高度自适应---flex、grid各列高度取决于最大高度的列，其他列与其保持一致，可单独定义较低高度列的高度；table严格保持每列高度一致，取决于最大高度；
 
-    BFC
+    绝对定位不指定高度时，可随内容自适应高度，若超出父级高度，则溢出；若没有内容，则高度为0，
 
-- 各自的兼容性；
+    - 清除浮动：
+        1. 父级div定义 height：
+            - 原理：父级div手动定义height，就解决了父级div无法自动获取到高度的问题；
+            - 优点：简单、代码少、容易掌握；
+            - 缺点：只适合高度固定的布局，要给出精确的高度，如果高度和父级div不一样时，会产生问题；
+            - 建议：不推荐使用，只建议高度固定的布局时使用。
+        2. 结尾处加空div标签 clear:both：
+           - 原理：添加一个空div，利用css提供的clear:both清除浮动，让父级div能自动获取到高度；
+           - 优点：简单、代码少、浏览器支持好、不容易出现怪问题；
+           - 缺点：不少初学者不理解原理；如果页面浮动布局多，就要增加很多空div，让人感觉很不好；
+           - 建议：不推荐使用，但此方法是以前主要使用的一种清除浮动方法 ；
+        3. 父级div定义 伪类:after 和 zoom：
+            ```css
+                .clearfloat:after{
+                    display:block;
+                    clear:both;
+                    content:"";
+                    visibility:
+                    hidden;height:0
+                }
+                .clearfloat{
+                    zoom:1;
+                }
+            ```
+           - 原理：IE8以上和非IE浏览器才支持:after，原理和方法2有点类似，zoom(IE转有属性)可解决ie6,ie7浮动问题;
+           - 优点：浏览器支持好、不容易出现怪问题（目前：大型网站都有使用，如：腾迅，网易，新浪等等）;
+           - 缺点：代码多、不少初学者不理解原理，要两句代码结合使用才能让主流浏览器都支持;
+           - 建议：推荐使用，建议定义公共类，以减少CSS代码;
+        4. 父级div定义 overflow:不为visible：
+           - 原理：建立了一个BFC。必须定义width或zoom:1，同时不能定义height，使用overflow:hidden时，浏览器会自动检查浮动区域的高度；
+           - 优点：简单、代码少、浏览器支持好；
+           - 缺点：none--不能和position配合使用，因为超出的尺寸的会被隐藏；auto--内部宽高超过父级div时，会出现滚动条；
+           - 建议：只推荐没有使用position或对overflow:hidden理解比较深的朋友使用；
+        5. 父级div 也一起浮动：
+           - 原理：所有代码一起浮动，就变成了一个整体；
+           - 优点：没有优点；
+           - 缺点：会产生新的浮动问题；
+           - 建议：不推荐使用，只作了解；
+
+    - BFC
+
+- 各自的兼容性--见上述优缺点说明；
 
 #### 总结
 
@@ -34,7 +261,6 @@
 2. 页面布局深刻理解；
     - 每个方案的原理要说出来；
     - 每种方案该怎么写；
-    - 
 3. CSS基础知识扎实；
 4. 思维灵活且积极上进；
 5. 代码书写规范。
@@ -44,6 +270,150 @@
 - 三栏布局
     1. 左右宽度固定，中间自适应；
     2. 上下宽度固定，中间自适应；
+        1. 绝对定位
+
+        ```html
+        <section class="layout">
+            <style>
+                *{
+                    padding:0;
+                    margin:0;
+                }
+                .layout > .top-center-bottom{
+                    position:relative;
+                    height:100%;
+                }
+                /*每个子项均需指定宽度*/
+                .layout div{
+                    position:absolute;
+                    width:100%;
+                }
+                .layout .top{
+                    top:0;
+                    height:20px;
+                    background-color:red;
+                }
+                .layout .bottom{
+                    bottom:0;
+                    height:20px;
+                    background-color:red;
+                }
+                .layout .center{
+                    top:20px;
+                    bottom:20px;
+                    background-color:blue;
+                }
+            </style>
+            <article class="top-center-bottom">
+                <div class="top"></div>
+                <div class="center">绝对定位</div>
+                <div class="bottom"></div>
+            </article >
+        </section>
+        ```
+        2. display:flex
+        ```html
+        <section class="layout">
+            <style>
+                *{
+                    padding:0;
+                    margin:0;
+                }
+                .layout .top-center-bottom{
+                    display:flex;
+                    flex-direction: column;
+                    height:100%;
+                }
+                .layout .top{
+                    height:20px;
+                    background-color:red;
+                }
+                .layout .bottom{
+                    height:20px;
+                    background-color:red;
+                }
+                .layout .center{
+                    flex:1;
+                    background-color:blue;
+                }
+            </style>
+            <article class="top-center-bottom">
+                <div class="top"></div>
+                <div class="center">display:flex</div>
+                <div class="bottom"></div>
+            </article >
+        </section>
+        ```
+
+        3. display:table
+
+        ```html
+        <section class="layout">
+            <style>
+                *{
+                    padding:0;
+                    margin:0;
+                }
+                .layout .top-center-bottom{
+                    display:table;
+                    width:100%;
+                    height:100%;
+                }
+                .layout div{
+                    display:table-row;
+                }
+                .layout .top{
+                    height:20px;
+                    background-color:red;
+                }
+                .layout .bottom{
+                    height:20px;
+                    background-color:red;
+                }
+                .layout .center{
+                    background-color:blue;
+                }
+            </style>
+            <article class="top-center-bottom">
+            <!--这里上下必须有内容，不然将不会显示背景色-->
+                <div class="top">top</div>
+                <div class="center">display:table</div>
+                <div class="bottom">bottom</div>
+            </article >
+        </section>
+        ```
+
+        4. display:grid
+
+        ```html
+        <section class="layout">
+            <style>
+                *{
+                    padding:0;
+                    margin:0;
+                }
+                .layout .top-center-bottom{
+                    display:grid;
+                    height:100%;
+                    grid-template-rows: 20px auto 20px;
+                }
+                .layout .top{
+                    background-color:red;
+                }
+                .layout .bottom{
+                    background-color:red;
+                }
+                .layout .center{
+                    background-color:blue;
+                }
+            </style>
+            <article class="top-center-bottom">
+                <div class="top"></div>
+                <div class="center">display:grid</div>
+                <div class="bottom"></div>
+            </article >
+        </section>
+        ```
 
 - 两栏布局
     1. 左宽度固定，右自适应；
