--- a/docs/resources/interview/2.基本能力考察/2.CSS盒模型.md
+++ b/docs/resources/interview/2.基本能力考察/2.CSS盒模型.md
@@ -1,16 +1,37 @@
+### 2.CSS盒模型
+
 #### 谈谈你对CSS盒模型的认识
 
 - 基本概念：标准模型 + IE模型；
 - 标准模型和IE模型区别：计算宽度和高度的不同；追问宽度、高度计算不同的原因；
 - CSS如何设置这两种模型：默认是什么，怎么设置；
     - 默认是 content-box;
-    - 设置：box-sizing:content;box-sizing:border-box;
+    - 设置：box-sizing:content-box;box-sizing:border-box;
 - JS如何设置获取盒模型对应的宽和高？几种方案？
-    1. dom.style.width/height;
-    2. dom.currentStyle.width/height;---仅IE支持
-    3. window.getComputed(dom).width/height;
-    4. dom.getBoundingClient().width/height;
+    1. [dom.style](https://developer.mozilla.org/zh-CN/docs/Web/API/HTMLElement/style).width/height;
+
+        兼容性最好；
+
+    2. dom.[currentStyle](https://developer.mozilla.org/zh-CN/docs/Web/API/Element/currentStyle).width/height;---仅IE支持
+
+        Element.currentStyle 是一个与 window.getComputedStyle方法功能相同的属性。这个属性实现在旧版本的IE浏览器（IE6）中.
+
+        该特性是非标准的，请尽量不要在生产环境中使用它！
+
+    3. window.[getComputedStyle(dom)](https://developer.mozilla.org/zh-CN/docs/Web/API/Window/getComputedStyle).width/height;
+
+        Window.getComputedStyle()方法返回一个对象，该对象在应用活动样式表并解析这些值可能包含的任何基本计算后报告元素的所有CSS属性的值。 私有的CSS属性值可以通过对象提供的API或通过简单地使用CSS属性名称进行索引来访问。
+
+        兼容IE9+；
+
+    4. dom.[getBoundingClientRec()](https://developer.mozilla.org/zh-CN/docs/Web/API/Element/getBoundingClientRect).width/height;
+
+        Element.getBoundingClientRect()方法返回元素的大小及其相对于视口的位置。
+
+        兼容到IE4；
+
     5. 区分它们的区别，知道它们哪个通用性更强；
+
 - 实例题：根据盒模型解释边距重叠
     1. 重叠原则；
         1. 父子元素；
@@ -18,10 +39,32 @@
         3. 空元素上下边距，取最大值
 - BFC（边距重叠解决方案）。IFC（略做了解）
     1. 基本概念；-- 块级格式化上下文
+
+        可以将BFC想象成一个箱子，BFC中的内容就相当于箱子里的物品，将物品摆放在箱子中，能避免与其他箱子中的物品混淆，还能保护它们不被破坏。
     2. BFC的原理（渲染规则）；
         1. BFC元素垂直方向的边距会发生重叠；
         2. BFC的区域不会与浮动元素的box发生重叠；
         3. BFC在页面上是一个独立的容器，外面的元素不会影响他里面的元素，里面的元素也不会影响外面的元素；
         4. 计算BFC元素高度的时候，浮动元素也会参与计算。
+
+        （补充BFC的5条规则）：
+        1. BFC有隔离作用，内部元素不会受外部元素影响（反之亦然）；
+        2. 一个元素只能存在于一个BFC中，如果能同时存在于两个BFC中，那么就违反了BFC的隔离规则；
+        3. BFC内的元素按正常流排列，元素之间的间隙由元素的外边距控制；
+        4. BFC中的内容不会与外面的浮动元素重叠；
+        5. 计算BFC的高度，需要包括BFC内的浮动子元素的高度。
+
     3. 如何创建BFC？
+
+        满足下列条件中的一个即可创建BFC：
+        1. 根元素，也就是html元素；
+        2. float属性不为none的浮动元素；
+        3. position属性时absolute或fixed的定位元素；
+        4. display属性为inline-block、table-cell（相当于td或th元素）、table-caption（相当于caption元素）或伸缩盒（flex和inline-flex）的元素；
+        5. overflow属性不为visible的块级元素。
+
     4. BFC的使用场景
+
+        1. 清除浮动；
+        2. 解决外边距塌陷；
+        3. 宽度自适应的两栏布局；
