--- a/docs/resources/interview/2.基本能力考察/3.DOM事件.md
+++ b/docs/resources/interview/2.基本能力考察/3.DOM事件.md
@@ -1,4 +1,4 @@
-### DOM事件
+### 3.DOM事件
 
 #### 基本概念：DOM事件级别
 
@@ -52,7 +52,7 @@ Event对象，拿用户击中事件的参数，比如键盘值。
 
 #### 自定义事件
 
-- Event() 构造函数, 创建一个新的事件对象 Event。参数：
+- [Event()](https://developer.mozilla.org/zh-CN/docs/Web/API/Event/Event) 构造函数, 创建一个新的事件对象 Event。参数：
     1. typeArg：是DOMString 类型，表示所创建事件的名称；
     2. eventInit（可选）：是 EventInit 类型的字典，接受以下字段:
         - "bubbles"，可选，Boolean类型，默认值为 false，表示该事件是否冒泡。
