--- a/docs/resources/interview/2.基本能力考察/4.HTTP协议.md
+++ b/docs/resources/interview/2.基本能力考察/4.HTTP协议.md
@@ -1,4 +1,4 @@
-### HTTP协议
+### 4.HTTP协议
 
 #### HTT协议的主要特点
 
@@ -165,12 +165,6 @@ HTTP在1.1版本才支持持久连接。
 
 1. 要聊出管线化原理（要把请求打包，响应依次回来）；
 2. 管线化的特点（特点1、特点2、特点3）
-
-
-#### 补充
-
-- 缓存
-- cors
 
 #### 参考资料
 
