--- a/docs/resources/interview/3.JacaScript技能讲解/3.页面性能.md
+++ b/docs/resources/interview/3.JacaScript技能讲解/3.页面性能.md
@@ -1,3 +1,5 @@
+### 3.页面性能
+
 页面卡不卡，流不流畅。
 
 #### 题目1：提升页面性能的方法有哪些？
@@ -11,13 +13,13 @@
     2. 缓存的原理；
 4. **使用CDN**；
 5. 预解析DNS
-```html
-<!-->页面中所有的a标签在一些高级浏览器中是默认打开了dns预解析的，但是如果这个页面是https协议开头的，很多浏览器是默认关闭dns预解析的。所以下面第一句是强制打开a标签的dns预解析<-->
-<!-->额外的出彩方法<-->
-<meta http-equiv="x-dns-perfetch-control" content="on">
-<!-->常规方法：设置dns预解析<-->
-<link rel="dns-perfetch" href="//host_name_to_perfetch.com">
-```
+    ```html
+    <!--页面中所有的a标签在一些高级浏览器中是默认打开了dns预解析的，但是如果这个页面是https协议开头的，很多浏览器是默认关闭dns预解析的。所以下面第一句是强制打开a标签的dns预解析-->
+    <!--额外的出彩方法-->
+    <meta http-equiv="x-dns-perfetch-control" content="on">
+    <!--常规方法：设置dns预解析-->
+    <link rel="dns-perfetch" href="//host_name_to_perfetch.com">
+    ```
 
 #### 题目2：从浏览器输入URL开始，到浏览器渲染页面，经历了什么？
 
@@ -26,11 +28,16 @@
 1. 异步加载的方式
     - 动态脚本加载；--用js创造一个script标签，然后加到文档中
     - defer；--在script上加上这个属性
+        
+        > 这个布尔属性被设定用来通知浏览器该脚本将在文档完成解析后，触发 DOMContentLoaded 事件前执行。如果缺少 src 属性（即内嵌脚本），该属性不应被使用，因为这种情况下它不起作用。对动态嵌入的脚本使用 `async=false` 来达到类似的效果。
+
     - async；-在script上加上这个属性
+
+        > 该布尔属性指示浏览器是否在允许的情况下异步执行该脚本。该属性对于内联脚本无作用 (即没有src属性的脚本）
 
 2. 异步加载的区别
     - defer是在HTML解析完之后才会执行，如果是多个，按照加载的顺序依次执行；
-    - async是在加载完之后立即执行，如果是多个，执行顺序和加载顺序无关（谁先加载完就先执行谁）；
+    - async是在加载完之后立即执行，如果是多个，执行顺序和加载顺序无关（谁先加载完就先执行谁）（IE10+）；
     - defer能保证js按照加载顺序进行执行，而async不行
 
 #### 浏览器缓存
@@ -38,7 +45,7 @@
 1. 缓存的分类
     1. 强缓存：不发出请求，直接获取浏览器的本地缓存；
     ```js
-    //HTTP 协议头
+    //HTTP 协议头 --详细说明见文末HTTP缓存
     //Expires：过期时间；value表示的是服务器下发的绝对时间，将客户端的时间与这个时间作比较
     Expires:Thu,21 Jan 2017 23:39:02 GMT
     //由于客户端时间和服务器时间可能不一致，所以新增加了Cache-Control
@@ -48,7 +55,7 @@
     ```
     2. 协商缓存：浏览器发现本地有这个资源文件的副本，但是又不确定它有没有更新，这时向服务器发送一个查询，这个文件要不要直接使用；
     ```js
-    //HTTP 协议头
+    //HTTP 协议头 --详细说明见文末HTTP缓存
     //Last-Modified（响应体中） ：上次修改的时间（拿到这个文件的时候，服务器会给这个资源文件的HTTP响应头中加入这个Last-Modified）
     //If-Modified-Since（请求头）：当强缓存失效，浏览器不确定这个资源文件是否发生变化，将会发生请求，而这时HTTP请求头的这个key的value将会是Last-Modified的值。
     //Etag ：这两者等同于上面两个
@@ -59,6 +66,10 @@
     缓存就是值这个资源文件在浏览器中的备份，浏览器下次请求的时候相当于从电脑磁盘直接读取，而不会再去请求这个资源文件的地址。
 
 #### 跟缓存相关的HTTP头有哪些？
+
+- Cache-Control;
+- ETage && If-None-Match;
+- Last-Modified && If-Modified-Since;
 
 #### 参考资料
 
@@ -76,6 +87,238 @@
 
 ### 拓展
 
-1. meta配置；
-2. dns预解析；
-3. 缓存；
+#### 1.[meta配置](https://developer.mozilla.org/zh-CN/docs/Web/HTML/Element/meta)；
+
+1. charset
+
+> 此特性声明当前文档所使用的字符编码，但该声明可以被任何一个元素的 lang 特性的值覆盖。`鼓励使用 UTF-8`。
+
+2. content
+
+> 此属性包含http-equiv 或name 属性的值，具体取决于所使用的值。
+
+3. http-equiv
+
+> 这个枚举属性定义了能改变服务器和用户引擎行为的编译。这个编译值使用content 来定义，如下： 
+
+- "content-security-policy"内容安全策略：
+
+    它允许页面作者定义当前页的 内容策略。 内容策略主要指定允许的服务器源和脚本端点，这有助于防止跨站点脚本攻击。
+
+- default-style：
+
+    这个属性指定了在页面上使用的首选样式表. content属性必须包含 link 元素的标题, href属性链接到CSS样式表或包含CSS样式表的 style 元素的标题.
+
+- refresh:
+
+    这个属性指定:
+    - 如果content 只包含一个正整数,则是重新载入页面的时间间隔(秒);
+    - 如果content 包含一个正整数并且跟着一个字符串,则是重定向到指定链接的时间间隔(秒)
+
+*以下属性均过时，应使用替代方案*
+- content-language
+
+    这个指令定义页面使用的默认语言. 
+
+    使用 html 元素上全局的 lang 属性来替代它.
+
+- "content-type" 
+
+    这个属性定义了文档的 MIME type , 实际上由它的字符编码决定。
+
+    使用 meta 元素的 charset 属性代替。
+
+- set-cookie
+
+    为页面定义cookie。
+
+    改用HTTP的Set-Cookie头部
+
+4. name
+
+> 该属性定义文档级元数据的名称。如果以下其中一个属性设置了itemprop, http-equiv or charset ，就不能在设置这个属性了。
+
+此元数据名称与content 属性包含的值相关联。name属性的可能值为：
+
+- application-name，定义正运行在该网页上的网络应用名称；
+- author，就是这个文档的作者名称，可以用自由的格式去定义； 
+- description，其中包含页面内容的简短和精确的描述。 一些浏览器，如Firefox和Opera，将其用作书签页面的默认描述。
+- generator, 包含生成页面的软件的标识符。
+- keywords, 包含与逗号分隔的页面内容相关的单词。
+- referrer, 控制所有从该文档发出的 HTTP 请求中HTTP Referer 首部的内容：meta name="referrer"。 content 属性可取的值：
+    1. no-referrer：不要发送 HTTP Referer 首部；
+    2. origin：发送当前文档的 origin；
+    3. no-referrer-when-downgrade：当目的地是先验安全的(https->https)则发送 origin 作为 referrer ，但是当目的地是较不安全的 (https->http)时则不发送 referrer 。这个是默认的行为。
+    4. origin-when-crossorigin：在同源请求下，发送完整的URL (不含查询参数) ，其他情况下则仅发送当前文档的 origin。
+    5. unsafe-URL：在同源请求下，发送完整的URL (不含查询参数)。
+- creator, 以自由格式定义文档创建者的名称。注意，它可以是机构的名称。如果有多个元素，应该使用几个 meta 元素
+- googlebot, 这是机器人的同义词，但后面只有Googlebot，谷歌的索引爬虫
+- publisher, 在自由格式中，文档的发布者的名称。
+- robots, 定义协作爬虫程序应该具有的页面行为。
+- slurp, 与robots一样， 但其仅使用于 Slurp -- Yahoo Search的抓取工具。
+- viewport, 它提供有关视口初始大小的提示，仅供移动设备使用。
+
+    值的内容为： 
+    ```html 
+    <meta name="viewport">
+    ```
+
+    |Value |可能值 |描述 |
+    |:---|:---|:---|
+    |width 	        |一个正整数或者字符串 device-width 	 |以pixels（像素）为单位， 定义viewport（视口）的宽度。|
+    |height 	    |一个正整数或者字符串 device-height  |以pixels（像素）为单位， 定义viewport（视口）的高度。|
+    |initial-scale 	|一个0.0 到10.0之间的正数           |定义设备宽度（纵向模式下的设备宽度或横向模式下的设备高度）与视口大小之间的缩放比率。|
+    |maximum-scale 	|一个0.0 到10.0之间的正数 	        |定义缩放的最大值；它必须大于或等于minimum-scale的值，不然会导致不确定的行为发生。|
+    |minimum-scale 	|一个0.0 到10.0之间的正数 	        |定义缩放的最小值；它必须小于或等于maximum-scale的值，不然会导致不确定的行为发生。|
+    |user-scalable 	|一个布尔值（yes 或者no）       	|如果设置为 no，用户将不能放大或缩小网页。默认值为 yes。|
+
+- 兼容性适配
+
+兼容性配置：让ie走最高级的edge渲染，如果有chrome就Chrome渲染
+```html
+<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+```
+
+如果是双核浏览器优先使用webkit内核
+```html
+<meta name="renderer" content="webkit">
+```
+
+- 参考资料
+
+[Meta标签用法大全](https://www.cnblogs.com/qiumohanyu/p/5431859.html)
+[移动前端开发之viewport的深入理解](https://www.cnblogs.com/2050/p/3877280.html)
+
+#### 2.dns预解析；
+
+DNS Prefetching 是让具有此属性的域名不需要用户点击链接就在后台解析，而域名解析和内容载入是串行的网络操作，所以这个方式能 减少用户的等待时间，提升用户体验 。
+
+默认情况下浏览器会对页面中和当前域名（正在浏览网页的域名）不在同一个域的域名进行预获取，并且缓存结果，这就是隐式的 DNS Prefetch。如果想对页面中没有出现的域进行预获取，那么就要使用显示的 DNS Prefetch 了。
+
+- DNS Prefetch 应该尽量的放在网页的前面，推荐放在 `<meta charset="UTF-8">` 后面。具体使用方法如下：
+```html
+<meta http-equiv="x-dns-prefetch-control" content="on">
+<link rel="dns-perfetch" href="//host_name_to_perfetch.com">
+<!--例如：-->
+<link rel="dns-prefetch" href="http://bdimg.share.baidu.com" />
+
+<link rel="dns-prefetch" href="//bdimg.share.zhix.net">
+
+<link rel="dns-prefetch" href="https://app.alipay.com">
+```
+
+- 浏览器支持情况：
+    - Safari: 5+
+    - Chrome: All
+    - Firefox: 3.5+
+    - Opera: Unknown
+    - IE: 9+ (called “Pre-resolution” on blogs.msdn.com)
+
+- 如果需要禁止隐式的 DNS Prefetch，可以使用以下的标签：
+```html
+<meta http-equiv="x-dns-prefetch-control" content="off">
+```
+
+- 参考资料
+
+[前端优化系列之一：DNS预获取 dns-prefetch 提升页面载入速度](https://www.cnblogs.com/lhm166/articles/6073787.html)
+
+
+#### 3.[HTTP缓存](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Caching_FAQ)：
+
+> 缓存是一种保存资源副本并在下次请求时直接使用该副本的技术。当 web 缓存发现请求的资源已经被存储，它会拦截请求，返回该资源的拷贝，而不会去源服务器重新下载。
+> 
+> 这样带来的好处有：缓解服务器端压力，提升性能(获取资源的耗时更短了)。
+
+1. 缓存的种类：
+
+> 缓存的种类有很多,其大致可归为两类：私有与共享缓存。共享缓存存储的响应能够被多个用户使用；私有缓存只能用于单独用户。主要是浏览器与代理缓存；除此之外还有网关缓存、CDN、反向代理缓存和负载均衡器等部署在服务器上，为站点和 web 应用提供更好的稳定性、性能和扩展性。
+
+- (私有)浏览器缓存
+
+    私有缓存只能用于单独用户。浏览器缓存拥有用户通过 HTTP 下载的所有文档。这些缓存为浏览过的文档提供向后/向前导航，保存网页，查看源码等功能，可以避免再次向服务器发起多余的请求。它同样可以提供缓存内容的离线浏览。
+
+- (共享)代理缓存
+
+    共享缓存可以被多个用户使用。例如，ISP 或你所在的公司可能会架设一个 web 代理来作为本地网络基础的一部分提供给用户。这样热门的资源就会被重复使用，减少网络拥堵与延迟。
+
+2. 缓存操作的目标
+
+常见的 HTTP 缓存只能存储 `GET 响应`，对于其他类型的响应则无能为力。缓存的关键主要包括request method和目标URI（一般只有GET请求才会被缓存）。 普遍的缓存案例:
+- 一个检索请求的成功响应: 对于 GET请求，响应状态码为：200，则表示为成功。一个包含例如HTML文档，图片，或者文件的响应。
+- 永久重定向: 响应状态码：301。
+- 错误响应: 响应状态码：404 的一个页面。
+- 不完全的响应: 响应状态码 206，只返回局部的信息。
+- 除了 GET 请求外，如果匹配到作为一个已被定义的cache键名的响应。
+
+3. 缓存控制
+
+> HTTP/1.1定义的 Cache-Control 头用来区分对缓存机制的支持情况， 请求头和响应头都支持这个属性。通过它提供的不同的值来定义缓存策略。
+
+- 禁止进行缓存
+
+> 缓存中不得存储任何关于客户端请求和服务端响应的内容。每次由客户端发起的请求都会下载完整的响应内容。
+```js
+Cache-Control: no-store
+```
+
+- 强制确认缓存
+
+> 如下头部定义，此方式下，每次有请求发出时，缓存会将此请求发到服务器（译者注：该请求应该会带有与本地缓存相关的验证字段），服务器端会验证请求中所描述的缓存是否过期，若未过期（注：实际就是返回304），则缓存才使用本地缓存副本。
+
+```js
+Cache-Control: no-cache
+```
+
+- 私有缓存和公共缓存
+
+> "public" 指令表示该响应可以被任何中间人（译者注：比如中间代理、CDN等）缓存。若指定了"public"，则一些通常不被中间人缓存的页面（译者注：因为默认是private）（比如 带有HTTP验证信息（帐号密码）的页面 或 某些特定状态码的页面），将会被其缓存。
+> 
+> 而 "private" 则表示该响应是专用于某单个用户的，中间人不能缓存此响应，该响应只能应用于浏览器私有缓存中。
+
+```js
+Cache-Control: private
+Cache-Control: public
+```
+
+- 缓存过期机制
+
+> 过期机制中，最重要的指令是 "max-age=< seconds>"，表示资源能够被缓存（保持新鲜）的最大时间。相对[Expires](Expires)而言，max-age是距离请求发起的时间的秒数。针对应用中那些不会改变的文件，通常可以手动设置一定的时长以保证缓存有效，例如图片、css、js等静态资源。
+> 
+> Expires 响应头包含日期/时间， 即在此时候之后，响应过期。如果在Cache-Control响应头设置了 "max-age" 或者 "s-max-age" 指令，那么 Expires 头会被忽略。
+
+```js
+Cache-Control: max-age=31536000
+```
+
+- 缓存验证确认
+
+> 当使用了 "must-revalidate" 指令，那就意味着缓存在考虑使用一个陈旧的资源时，必须先验证它的状态，已过期的缓存将不被使用。
+
+```js
+Cache-Control: must-revalidate
+```
+
+4. 新鲜度
+
+> 理论上来讲，当一个资源被缓存存储后，该资源应该可以被永久存储在缓存中。由于缓存只有有限的空间用于存储资源副本，所以缓存会定期地将一些副本删除，这个过程叫做`缓存驱逐`。
+> 
+> 当服务器上面的资源进行了更新，那么缓存中的对应资源也应该被更新，由于HTTP是C/S模式的协议，服务器更新一个资源时，不可能直接通知客户端及其缓存，所以双方必须为该资源约定一个过期时间，在该过期时间之前，该资源（缓存副本）就是新鲜的，当过了过期时间后，该资源（缓存副本）则变为陈旧的。
+> 
+> 一个陈旧的资源（缓存副本）是不会直接被清除或忽略的，当客户端发起一个请求时，缓存检索到已有一个对应的陈旧资源（缓存副本），则缓存会先将此请求附加一个If-None-Match头，然后发给目标服务器，以此来检查该资源副本是否是依然还是算新鲜的，若服务器返回了 304 (Not Modified)（该响应不会有带有实体信息），则表示此资源副本是新鲜的，这样一来，可以节省一些带宽。若服务器通过 If-None-Match 或 If-Modified-Since判断后发现已过期，那么会带有该资源的实体内容返回。
+> 
+> 对于含有特定头信息的请求，会去计算缓存寿命。比如Cache-control: max-age=N的头，相应的缓存的寿命就是N。通常情况下，对于不含这个属性的请求则会去查看是否包含Expires属性，通过比较Expires的值和头里面Date属性的值来判断是否缓存还有效。如果max-age和expires属性都没有，找找头里的Last-Modified信息。如果有，缓存的寿命就等于头里面Date的值减去Last-Modified的值除以10（注：根据rfc2626其实也就是乘以10%）。
+
+5. 缓存验证
+
+> 用户点击刷新按钮时会开始缓存验证。如果缓存的响应头信息里含有"Cache-control: must-revalidate”的定义，在浏览的过程中也会触发缓存验证。另外，在浏览器偏好设置里设置Advanced->Cache为强制验证缓存也能达到相同的效果。
+> 
+> 当缓存的文档过期后，需要进行缓存验证或者重新获取资源。只有在服务器返回强校验器或者弱校验器时才会进行验证。
+
+- ETags
+
+> 作为缓存的一种强校验器，ETag 响应头是一个对用户代理(User Agent, 下面简称UA)不透明（译者注：UA 无需理解，只需要按规定使用即可）的值。对于像浏览器这样的HTTP UA，不知道ETag代表什么，不能预测它的值是多少。如果资源请求的`响应头`里含有`ETag`, 客户端可以在`后续的请求的头`中带上 `If-None-Match` 头来验证缓存。
+> 
+> `Last-Modified` `响应头`可以作为一种弱校验器。说它弱是因为它只能精确到一秒。如果响应头里含有这个信息，客户端可以在`后续的请求中`带上 `If-Modified-Since` 来验证缓存。
+> 
+> 当向服务端发起缓存校验的请求时，服务端会返回 200 ok表示返回正常的结果或者 304 Not Modified(不返回body)表示浏览器可以使用本地缓存文件。304的响应头也可以同时更新缓存文档的过期时间。
