--- a/docs/resources/面试题目/常见面试题.md
+++ b/docs/resources/面试题目/常见面试题.md
@@ -147,6 +147,19 @@
 
 #### 9.margin auto是怎么实现的，margin的实现原理
 
+#### 10.什么是外边距塌陷？
+
+    外边距塌陷也称为外边距合并；是指两个在正常文档流中相邻（兄弟或父子关系）的块级元素的外边距，组合在一起变成单个外边距，只有上下外边距才会塌陷。通常有4种情况会发生塌陷：
+1. 父元素（没有上边框和上内边距）和第一个子元素，在第一个元素之前没有内容，同时为其定义了上外边距；
+2. 父元素（没有下边框和下内边距）和最后一个子元素，在最后一个元素之后没有内容，同时为其定义了下外边距；
+3. 两个相邻的兄弟元素，分别定义了下外边距和上外边距；
+4. 一个空的元素（没有高、边框、内边距和内容），值定义了上下外边距。
+
+- 当发生外边距塌陷时，外边距之间的计算方式是怎样的？
+    1. 两个都是正数，取较大的值；
+    2. 两个都是负数，取绝对值较大的值；
+    3. 一正一负，取两个值相加的和。
+
 ---
 
 ## JS部分
