--- a/docs/resources/interview/2.基本能力考察/7.通信.md
+++ b/docs/resources/interview/2.基本能力考察/7.通信.md
@@ -35,12 +35,127 @@
 
 #### 如何创建Ajax
 
+不是考察代码，一定要在浏览器跑起来，而是看逻辑和思维方式。
+
 1. XMLHttpRequest对象的工作流程
-2. 兼容性处理
+
+    查看工作流程是否清楚，第一步干嘛、第二步干嘛、...看代码中有没有体现，是不是逻辑很清晰，
+
+2. **兼容性处理**
 
     XMLHttpRequest高级浏览器才支持，老版IE并不支持。
+    
 3. 事件的触发条件
+
+    事件响应要清晰，知道哪一个事件是在什么情况下触发的，
+
 4. 事件的触发顺序
+
+    XMLHttpRequest有很多事件，它的每一个事件是怎样依次触发的。第二步要干的事放到了第一步，这是不行的。
+
+- step1. 创建XMLHttpRequest对象，也就是创建一个异步调用对象； 
+
+    ```js
+    var xhr = XMLHttpRequest ? new XMLHttpRequest() : New ActiveXObject('Microsoft.XMLHTTP');
+    ```
+    
+- step2. 创建一个新的HTTP请求，并指定该HTTP请求的方法、URL以及验证信息； 
+
+    ```js
+    xhr.open('get','03form.php',true);
+    ```
+    
+- step3. 设置响应HTTP状态变化的函数； 
+- step4. 发送HTTP请求；
+
+    ```js
+    xhr.send(null);
+    ```
+    
+- step5. 获取异步调用返回的数据； 
+
+    ```js
+    xhr.onload = function(){
+        if(xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200){
+            var res = JSON.parse(xhr.responseText);
+        }
+    }
+    ```
+
+- step6. 使用javascript和DOM实现局部刷新；
+
+```js
+<script type="text/javascript">
+  window.onload = function () {
+    //第一步：创建xhr对象
+    //xhr是一个对象；里面可以放很多东西，数据；
+    var xhr = null;
+    if (window.XMLHttpRequest) {//标准浏览器
+      xhr = new XMLHttpRequest();//创建一个对象
+    } else {//早期的IE浏览器
+      xhr = new ActiveXObject('Microsoft.XMLHTTP');//参数是规定的；
+    }
+    console.log("状态q" + xhr.readyState);//0
+    //第二步：准备发送请求-配置发送请求的一些行为
+    //open即打开链接，第一个参数是以什么方式；第二个是往哪儿发送请求，第三个可以不写，默认true,表示异步，false表示同步；；
+    xhr.open('get', '03form.php', true);
+    console.log("状态w" + xhr.readyState);//1
+
+    //第三步：执行发送的动作
+    //send也可以写在前面，推荐写在后面；写null是兼容问题；
+    xhr.send(null);
+    console.log("状态e" + xhr.readyState);//1
+
+    //第四步：指定一些回调函数，也属于事件函数；不触发不执行，触发条件是xhr.readyState;这个值有0-4，共5个状态，是由浏览器控制的，具体见下文；
+    xhr.onreadystatechange = function () {
+      if (xhr.readyState == 4) {//4指服务器返回的数据可以使用；
+        if (xhr.status == 200) { //判断已经成功的获取了数据；200表示hTTP请求成功；404表示找不到页面；503表示服务器端有语法错误；
+          var data = xhr.responseText;//json，文本，主角；
+          // var data1 = xhr.responseXML;
+        }
+      }
+      // console.log("状态t"+xhr.readyState);//2表示已经发送完成；
+
+      // console.log(1234);
+    }
+
+    // console.log(456);
+    console.log("状态r" + xhr.readyState);//1
+  }
+</script>
+```
+
+- [XMLHttpRequest.readyState](https://developer.mozilla.org/zh-CN/docs/Web/API/XMLHttpRequest/readyState)
+
+XMLHttpRequest.readyState 属性返回一个 XMLHttpRequest  代理当前所处的状态。一个 XHR 代理总是处于下列状态中的一个：
+
+|值 |状态 |描述 |
+|:---|:---|:---|
+|0 	|UNSENT 	|代理被创建，但尚未调用 open() 方法。|
+|1 	|OPENED 	|open() 方法已经被调用。|
+|2 	|HEADERS_RECEIVED 	|send() 方法已经被调用，并且头部和状态已经可获得。|
+|3 	|LOADING 	|下载中； responseText 属性已经包含部分数据。|
+|4 	|DONE 	|下载操作已完成。|
+
+```js
+var xhr= new XMLHttpRequest(),
+    method = "GET",
+    url = "https://developer.mozilla.org/";
+
+xhr.send();
+xhr.open(method, url, true);
+xhr.onreadystatechange = function () {
+  if(xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
+    console.log(xhr.responseText)
+  }
+}
+xhr.onload = function () {
+    if(xhr.status === 200 || xhr.status === 304){
+        var res = KSON.pares(xhr.responseText);
+    }
+};
+```
+
 
 #### 跨域通信的几种方式
 
@@ -114,9 +229,12 @@ event.source.postMessage('data','http://A.com');
 //A页面同样注册一个message事件就行
 ```
 
-- WebSocket的实现
+- [WebSocket](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSockets_API)的实现
 
 了解概念即可，知道有这么回事
+
+> `WebSockets` 是一种先进的技术。它可以在用户的浏览器和服务器之间打开交互式通信会话。使用此API，您可以向服务器发送消息并接收事件驱动的响应，而无需通过轮询服务器的方式以获得响应。
+
 ```js
 //wss（加密） || ws（非加密）: 服务器地址
 var ws = new WebSocket('wss://echo.websocket.org');
@@ -166,6 +284,83 @@ CORS为什么能实现跨域通信？
 2. 你了不了解这块的原理；
 3. 前3种方案写入大概代码；后两种写出基础实现
 
+#### 拓展
+
+1. [WebSocket API](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket)
+
+- 构造函数
+
+`WebSocket(url, ?protocols)`；返回一个 WebSocket 对象
+
+- 属性
+    1. WebSocket.bufferedAmount(只读)：未发送至服务器的字节数；
+    2. WebSocket.extensions(只读)：服务器选择的拓展；
+    3. WebSocket.onclose：用于指定连接关闭后的回调函数；
+    4. WebSocket.onerror：用于指定连接失败后的回调函数；
+    5. WebSocket.onmessage：用于指定当从服务器接受到信息时的回调函数；
+    6. WebSocket.onopen：用于指定连接成功的回调函数；
+    7. WebSocket.protocol(只读)：服务器选择的下属协议；
+    8. WebSocket.readyState(只读)：当前的链接状态；
+    9. WebSocket.url(只读)：WebSocket的绝对路径。
+
+- 常量
+    1. CONNECTING：值为0，表示正在连接。
+    2. OPEN：值为1，表示连接成功，可以通信了。
+    3. CLOSING：值为2，表示连接正在关闭。
+    4. CLOSED：值为3，表示连接已经关闭，或者打开连接失败。
+
+可通过 `WebSocket.readyState` 对照上述常量判断 WebSocket 连接 当前所处的状态
+
+- 方法
+    1. [WebSocket.close(?code,?reason)](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket/close);
+        - code(可选)：一个数字状态码，它解释了连接关闭的原因。默认使用1005。
+        - reason(可选)：一个人类可读的字符串，它解释了连接关闭的原因。
+    2. [WebSocket.send(data)](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket/send)；
+        - data可以是其中一种类型：USVString（文本字符串）、ArrayBuffer、Blob、ArrayBufferView
+
+- 示例
+
+```js
+// Create WebSocket connection.
+const socket = new WebSocket('ws://localhost:8080');
+
+// Connection opened
+socket.addEventListener('open', function (event) {
+    socket.send('Hello Server!');
+});
+
+// Listen for messages
+socket.addEventListener('message', function (event) {
+    console.log('Message from server ', event.data);
+});
+```
+
+2. [ASP.NET SignalR](https://www.cnblogs.com/xiaoyaojian/p/3723515.html)
+
+ASP.NET SignalR 是一个为 ASP.NET 开发人员的库，简化了将实时 web 功能添加到应用程序的过程。实时Web功能使服务端代码推送内容到链接可客服端并立即应用成为可能，而不需要服务端等待客户端去请求数据。
+
+SignalR当WebSocket可用时优先使用新式的WebSocket传输，遇到其他兼容旧的浏览器signalr会用其他技术支持"双向通信"。
+
+```js
+$(function () {
+    //创建一个hub服务
+    var hub = $.connection.chatHub;
+    $.connection.hub.start()
+        .done(function () {
+            hub.server.watcherTxt();	//进入后台方法
+        })
+        .fail(function () {
+            alert("连接失败!");
+        });
+    hub.client.hello = function (name) {	//前台hello方法
+        alert(name);
+    };
+    $("#sayHello").click(function () {
+        hub.server.hello("Jack");		//向后台发送数据
+    })
+});
+```
+
 #### 参考资料
 
 
@@ -176,6 +371,18 @@ CORS为什么能实现跨域通信？
 [URL中，?后面的东西，是search](https://developer.mozilla.org/zh-CN/docs/Web/API/URLSearchParams)
 
 [WebSocker](http://www.ruanyifeng.com/blog/2017/05/websocket.html)
+
+为什么需要WebSocket？因为HTTP协议又一个缺陷：通信只能由客户端发起。这种单向请求的特点，注定了如果服务器有连续的状态变化，客户端要获知就非常麻烦。我们只能使用“轮询”：每隔一段时候，就发出一个询问，了解服务器有没有新的信息。最典型的场景就是聊天室。
+
+而WebSocket 协议最大的特定就是，服务器可以主动向客户端推送信息，客户端也可以主动向服务器发送信息，是真正的双向平等对话，属于服务器推送技术的一种。
+
+其他特点包括：
+- 建立在 TCP 协议之上，服务器端的实现比较容易。
+- 与 HTTP 协议有着良好的兼容性。默认端口也是80和443，并且握手阶段采用 HTTP 协议，因此握手时不容易屏蔽，能通过各种 HTTP 代理服务器。
+- 数据格式比较轻量，性能开销小，通信高效。
+- 可以发送文本，也可以发送二进制数据。
+- 没有同源限制，客户端可以与任意服务器通信。
+- 协议标识符是ws（如果加密，则为wss），服务器网址就是 URL。
 
 [CORS](http://www.ruanyifeng.com/blog/2016/04/cors.html)
 
