--- a/docs/resources/interview/2.基本能力考察/7.通信.md
+++ b/docs/resources/interview/2.基本能力考察/7.通信.md
@@ -1,6 +1,6 @@
 ### 7.通信
 
-#### 什么时同源策略及限制
+#### 什么是同源策略及限制
 
 *就是考概念*
 
@@ -9,7 +9,7 @@
 - 一个源包含三部分内容：
     1. 协议；
     2. 域名；
-    3. 端口（默认是80）。
+    3. 端口（http默认是80，https默认是443）。
 > http://www.baidu.com:80
 
 这三个构成了一个源，其中有一个不一样，也就是源不一样，也就是我们所说的跨域了。
@@ -37,7 +37,7 @@
 
 不是考察代码，一定要在浏览器跑起来，而是看逻辑和思维方式。
 
-1. XMLHttpRequest对象的工作流程
+1. [XMLHttpRequest对象](https://developer.mozilla.org/zh-CN/docs/Web/API/XMLHttpRequest)的工作流程
 
     查看工作流程是否清楚，第一步干嘛、第二步干嘛、...看代码中有没有体现，是不是逻辑很清晰，
 
@@ -52,6 +52,8 @@
 4. 事件的触发顺序
 
     XMLHttpRequest有很多事件，它的每一个事件是怎样依次触发的。第二步要干的事放到了第一步，这是不行的。
+
+- 创建Ajax
 
 - step1. 创建XMLHttpRequest对象，也就是创建一个异步调用对象； 
 
@@ -186,13 +188,45 @@ xhr.onload = function () {
     ```js
     //这个回调函数需要与服务器协商好，保持前后端使用一致的函数名
     //当运行这个script的时候，把这个请求发出去（这个请求可以加各种参数，比如示例中的data）。
-    <script src="http://www.abc.com?data=name&callback=jsonp"></script>
+    <script src="http://www.abc.com?data=name&callback=jsonp" async="true"></script>
     //服务器返回一段script内容，并直接执行回调函数，所以需要前端具备这个回调函数。
     <script>
         jsonp({
             data:'xxx'
         });
     </script>
+    //所以前端必须要有这个同名的函数
+    function jsonp(obj){
+        console.log(obj.data);
+    }
+    ```
+    
+    更好的方式是通过js来动态的创建script标签
+    ```js
+    //注册全局函数
+    window['jsonp'] = function(obj){
+        console.log(obj.data);
+    }
+    //动态创建script标签
+    var script = document.createElement('script');
+    script.setAttribute('type','text/javascript');
+    script.setAttribute('url','http://www.abc.com?data=name&callback=jsonp');
+    script.async = true;
+    //绑定script的onload事件，以便加载成功删除该标签
+    script.onload = script.onreadystatechange = function(){
+        if(!script.readyState || /loaded|complete/.test(script.readyState)){
+            script.onload = script.onreadystatechange = null;
+            if(script.parentNode){
+                script.parentNode.removeChild(script);
+            }
+            window['jsonp'] = null;
+        }
+    }
+    script.onerror = function(){
+        console.log('jsonp error');
+    }
+    //动态添加标签--将请求发送出去
+    document.getElementByTagName('head')[0].appendChild(script);
     ```
 
 - Hash的实现原理是什么？
@@ -223,6 +257,10 @@ window.addEventListener('message',function(event){
     console.log(event.origin);//http://A.com
     console.log(event.source);//Awindow
     console.log(event.data);//data
+    //检测不是A窗口发过来的，则不做处理
+    if (event.origin !== "http://A.com"){
+        return;
+    }
 },false);
 //B给A发送
 event.source.postMessage('data','http://A.com');
@@ -286,7 +324,7 @@ CORS为什么能实现跨域通信？
 
 #### 拓展
 
-1. [WebSocket API](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket)
+##### 1.[WebSocket API](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket)
 
 - 构造函数
 
@@ -335,7 +373,7 @@ socket.addEventListener('message', function (event) {
 });
 ```
 
-2. [ASP.NET SignalR](https://www.cnblogs.com/xiaoyaojian/p/3723515.html)
+##### 2.[ASP.NET SignalR](https://www.cnblogs.com/xiaoyaojian/p/3723515.html)
 
 ASP.NET SignalR 是一个为 ASP.NET 开发人员的库，简化了将实时 web 功能添加到应用程序的过程。实时Web功能使服务端代码推送内容到链接可客服端并立即应用成为可能，而不需要服务端等待客户端去请求数据。
 
@@ -361,11 +399,103 @@ $(function () {
 });
 ```
 
+##### 3.[window.postMessage](https://developer.mozilla.org/zh-CN/docs/Web/API/Window/postMessage)
+
+1. 语法
+
+```js
+otherWindow.postMessage(message, targetOrigin, [transfer]);
+```
+
+- otherWindow：其他窗口的一个引用，比如iframe的contentWindow属性、执行window.open返回的窗口对象、或者是命名过或数值索引的window.frames。
+- message：将要发送到其他 window的数据。
+- targetOrigin：通过窗口的origin属性来指定哪些窗口能接收到消息事件，其值可以是字符串"*"（表示无限制）或者一个URI。
+- transfer（可选）：是一串和message 同时传递的 Transferable 对象.
+
+2. 目标窗口接收到的[MessageEvent](https://developer.mozilla.org/zh-CN/docs/Web/API/MessageEvent)消息：
+
+- MessageEvent.data（只读）：包含来自发送者的数据
+- MessageEvent.origin：返回一个表示消息发送者来源的USVString 
+- MessageEvent.source：MessageEventSource (可以是 WindowProxy, MessagePort, 或 ServiceWorker 对象) 代表消息发送者.
+- MessageEvent.ports：MessagePort对象数组，表示消息正通过特定通道（数据通道）发送的相关端口（适用于通道消息传输或者向一个共享线程（shared work ）发送消息时）。
+- MessageEvent.lastEventId（只读）：DOMString表示事件的唯一ID
+
+3. 示例
+
+- 发送窗口
+
+```js
+/*
+ * A窗口的域名是<http://example.com:8080>，以下是A窗口的script标签下的代码：
+ */
+
+var popup = window.open(...popup details...);
+
+// 如果弹出框没有被阻止且加载完成
+
+// 这行语句没有发送信息出去，即使假设当前页面没有改变location（因为targetOrigin设置不对）
+popup.postMessage("The user is 'bob' and the password is 'secret'",
+                  "https://secure.example.net");
+
+// 假设当前页面没有改变location，这条语句会成功添加message到发送队列中去（targetOrigin设置对了）
+popup.postMessage("hello there!", "http://example.org");
+
+function receiveMessage(event)
+{
+  // 我们能相信信息的发送者吗?  (也许这个发送者和我们最初打开的不是同一个页面).
+  if (event.origin !== "http://example.org")
+    return;
+
+  // event.source 是我们通过window.open打开的弹出页面 popup
+  // event.data 是 popup发送给当前页面的消息 "hi there yourself!  the secret response is: rheeeeet!"
+}
+window.addEventListener("message", receiveMessage, false);
+```
+
+- 接收窗口
+
+```js
+/*
+ * 弹出页 popup 域名是<http://example.org>，以下是script标签中的代码:
+ */
+
+//当A页面postMessage被调用后，这个function被addEventListenner调用
+function receiveMessage(event)
+{
+  // 我们能信任信息来源吗？
+  if (event.origin !== "http://example.com:8080")
+    return;
+
+  // event.source 就当前弹出页的来源页面
+  // event.data 是 "hello there!"
+
+  // 假设你已经验证了所受到信息的origin (任何时候你都应该这样做), 一个很方便的方式就是把enent.source
+  // 作为回信的对象，并且把event.origin作为targetOrigin
+  event.source.postMessage("hi there yourself!  the secret response " +
+                           "is: rheeeeet!",
+                           event.origin);
+}
+
+window.addEventListener("message", receiveMessage, false);
+```
+
+##### [CORS](http://www.ruanyifeng.com/blog/2016/04/cors.html)
+
+- 简介
+
+CORS需要浏览器和服务器同时支持。目前，所有浏览器都支持该功能，IE浏览器不能低于`IE10`。
+
+整个CORS通信过程，都是浏览器自动完成，不需要用户参与。对于开发者来说，CORS通信与同源的AJAX通信没有差别，代码完全一样。`浏览器一旦发现AJAX请求跨源，就会自动添加一些附加的头信息，有时还会多出一次附加的请求`，但用户不会有感觉。
+
+因此，实现CORS通信的关键是服务器。只要服务器实现了CORS接口，就可以跨源通信。
+
+- 与JSONP的比较
+
+CORS与JSONP的使用目的相同，但是比JSONP更强大。
+
+`JSONP只支持GET请求`，CORS支持所有类型的HTTP请求。JSONP的优势在于支持老式浏览器，以及可以向不支持CORS的网站请求数据。
+
 #### 参考资料
-
-
-[XMLHttpRequest (XHR)](https://developer.mozilla.org/zh-CN/docs/Web/API/XMLHttpRequest)
-
 
 [URL中，#后面的东西，是Hash](https://developer.mozilla.org/zh-CN/docs/Web/API/URL/hash)
 [URL中，?后面的东西，是search](https://developer.mozilla.org/zh-CN/docs/Web/API/URLSearchParams)
@@ -383,7 +513,5 @@ $(function () {
 - 可以发送文本，也可以发送二进制数据。
 - 没有同源限制，客户端可以与任意服务器通信。
 - 协议标识符是ws（如果加密，则为wss），服务器网址就是 URL。
-
-[CORS](http://www.ruanyifeng.com/blog/2016/04/cors.html)
 
 [Fetch](https://developer.mozilla.org/zh-CN/docs/Web/API/Fetch_API/Using_Fetch)
