--- a/docs/resources/interview/3.JacaScript技能讲解/3.页面性能.md
+++ b/docs/resources/interview/3.JacaScript技能讲解/3.页面性能.md
@@ -23,6 +23,12 @@
 
 #### 题目2：从浏览器输入URL开始，到浏览器渲染页面，经历了什么？
 
+1. 域名解析，根据域名找到服务器的IP地址；
+2. 建立TCP连接，浏览器与服务器经过3次握手后建立连接；
+3. 浏览器发起HTTP请求，获取想要的资源；
+4. 服务器响应HTTP请求，返回指定的资源；
+5. 浏览器渲染页面，解析接收到的HTML、CSS、JavaScript文件。
+
 #### 异步加载
 
 1. 异步加载的方式
